--- a/packages.config
+++ b/packages.config
@@ -1,14 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net481" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.1" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.2" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.1" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.2" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net481" />
   <package id="Npgsql" version="5.0.10" targetFramework="net481" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net481" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net481" />
+  <package id="PDFsharp-GDI" version="6.2.0" targetFramework="net481" />
+  <package id="PDFsharp-MigraDoc-GDI" version="6.2.0" targetFramework="net481" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net481" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
+  <package id="System.Security.Cryptography.Pkcs" version="8.0.1" targetFramework="net481" />
   <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net481" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net481" />
   <package id="System.Threading.Channels" version="4.7.0" targetFramework="net481" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
 </packages>
